// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portfolio tests shows portfolio overview with one account 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">test account</a> account:</li>
      <li>Total Cash: -16584.76 €</li>
      <li>Total Assets: 25874.64 €</li>
      <li>Portfolio Value: 9289.88 €</li>
    </ul>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <p>3 <a href=\\"\\">Positions</a> in 1 <a href=\\"\\"> Account</a></p><a class=\\"button\\">See all Positions</a><a class=\\"button\\">Manage accounts</a>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Events</span>
    <div>15 <a href=\\"\\">Transactions</a></div>
    <div>? <a href=\\"\\">Account Events</a></div><a class=\\"button\\">Manage transactions</a><a class=\\"button\\">Manage events</a>
  </div>
</div>"
`;

exports[`portfolio tests shows portfolio overview with two accounts 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">test account</a> account:</li>
      <li>Total Cash: -16584.76 €</li>
      <li>Total Assets: 25874.64 €</li>
      <li>Portfolio Value: 9289.88 €</li>
    </ul>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">second account</a> account:</li>
      <li>Total Cash: 161 $</li>
      <li>Total Assets: 5043.56 $</li>
      <li>Portfolio Value: 5204.56 $</li>
    </ul>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <p>5 <a href=\\"\\">Positions</a> in 2 <a href=\\"\\"> Accounts</a></p><a class=\\"button\\">See all Positions</a><a class=\\"button\\">Manage accounts</a>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Events</span>
    <div>20 <a href=\\"\\">Transactions</a></div>
    <div>? <a href=\\"\\">Account Events</a></div><a class=\\"button\\">Manage transactions</a><a class=\\"button\\">Manage events</a>
  </div>
</div>"
`;

exports[`portfolio tests shows portfolio overview without any accounts 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span></div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <p>0 <a href=\\"\\">Positions</a> in 0 <a href=\\"\\"> Account</a></p><a class=\\"button\\">See all Positions</a><a class=\\"button\\">Manage accounts</a>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Events</span>
    <div>0 <a href=\\"\\">Transactions</a></div>
    <div>? <a href=\\"\\">Account Events</a></div><a class=\\"button\\">Manage transactions</a><a class=\\"button\\">Manage events</a>
  </div>
</div>"
`;
